Доработал программу по условиям Спринт 8. Покрыл код тестами.